# LinkFlow

./: .gitignore  PROJECT_IMPLEMENTATION_STATUS.md  STYLEGUIDE.md  index.html  package-lock.json  package.json  tailwind.config.d.ts  tailwind.config.js  tailwind.config.ts  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/common/: AppSelect.tsx
src/components/layout/: AppLayout.tsx
src/components/main/: Header.tsx  MainContent.tsx  TaskCardPrimitives.tsx  TaskInputArea.tsx  TaskItem.tsx  TaskList.tsx  TaskScheduleToolbar.tsx  taskScheduleShared.ts
src/components/modals/: ActionPickerModal.tsx  ModalPrimitives.tsx  SettingsModal.tsx  TaskEditModal.tsx
src/components/sidebar/: Sidebar.tsx
src/hooks/: useMobileViewportLayout.ts
src/store/: mockData.ts  useAppStore.ts
src/types/: models.ts
src/utils/: actionEngine.ts  backendApi.ts  schedule.ts
