[package]
name = "linkflow"
version = "0.1.0"
description = "LinkFlow desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "linkflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.11", features = ["v4"] }
tauri-plugin-notification = "2"
chrono = "0.4"
